Closed Bug 1206084 Opened 9 years ago Closed 9 years ago

nsCORSListenerProxy::AsyncOnChannelRedirect() does not cancel original channel if RemoveCorsPreflightCacheEntry() fails

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
firefox43 --- fixed

People

(Reporter: bkelly, Assigned: bkelly)

References

Details

Attachments

(1 file)

See:

  https://dxr.mozilla.org/mozilla-central/source/netwerk/protocol/http/nsCORSListenerProxy.cpp#757

I fixed a similar problem in OnStartRequest(), but didn't realize the same pattern occurred here.
Blocks: 1199049
No longer depends on: 1199049
Attachment #8662938 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/mozilla-central/rev/504162ed4ed4
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: