Bug 1206084 Always Cancel() channel in nsCORSListenerProxy for failed redirects. r=ehsan